@@ -770,7 +770,7 @@ public class HomeFragment extends Fragment implements OnRefreshListener, LoaderM
         if (newTweets != 0) {
             unread = newTweets;
             int size = mActionBarSize + (DrawerActivity.translucent ? DrawerActivity.statusBarHeight : 0);
-            listView.setSelectionFromTop(newTweets + (MainActivity.isPopup ? 1 : 2), size);
+            listView.setSelectionFromTop(newTweets + (MainActivity.isPopup || landscape ? 1 : 2), size);
         }
     }
 
