@@ -1,5 +1,6 @@
 <b>Version 1.00:</b> Ahh finally a release, and a huge update along with it.<br/><br/>
     &#8226; Added a very powerful 'Theme Engine' for developers (https://github.com/lklinker/talon_theme)<br/>
+    &#8226; Added live streaming to the main timeline<br/>
     &#8226; Redesigned the tweet viewer to use a ViewPager. Allows for more dynamic content<br/>
     &#8226; Added a tutorial after login<br/>
     &#8226; Added a 'Hangouts' layout option as a default theme<br/>
